# maker-council

./: .env  .env.example  .gitignore  MAKER-SPECIFICATION.md  MCP-MODEL-API-SPEC.md  PROJECT-STRUCTURE.md  README.md  STREAMING-GUIDE.md  package-lock.json  package.json  pyproject.toml  server.py  test_mcp.py
.kilocode/rules-code/: maker-council-rules.md
.roo/: mcp.json
.roo/rules-code/: maker-council-rules.md
.serena/: project.yml
data/: maker_monitoring.db  maker_monitoring.db-shm  maker_monitoring.db-wal
maker-mcps/: mcp.json
src/: config.ts  index.ts  internal-tools.ts  logic.ts  server.ts  specs.ts  tasks.ts  tools.ts  types.ts  verify_db.ts
src/dashboard/: server.ts
src/dashboard/public/: index.html
src/db/: logger.ts
src/mcp-client/: McpConnection.ts  McpToolManager.ts  ToolSchemaTranslator.ts  index.ts  types.ts
src/types/: specs.ts  tasks.ts
tests/: coding-benchmark.ts  communication-flaws.ts  e2e-api-test.ts  logic-mcp-integration-test.ts  mcp-client-test.ts  mock-mcp-server.cjs  query-api.test.ts  stream-test.js  stress-test.ts
