[project]
name = "maker-council"
version = "1.0.0"
description = "MCP Server implementing MAKER methodology for massively decomposed agentic processes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MAKER-Council Team" }
]
keywords = ["mcp", "anthropic", "ai", "agents", "maker"]

dependencies = [
    "fastmcp>=0.1.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
maker-council = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]